<resources>
    <string name="app_name">Wolfyer_APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order_maid">order maid</string>
    <string name="name">NAME</string>
    <string name="wellcome_home">Wellcome Home</string>
    <string name="username">username</string>
    <string name="password2">password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="signup">SignUP</string>
    <string name="registered_ember">Registered Ｍember</string>
    <string name="logout">LOGOUT</string>
    <string name="nickname">nickname</string>
    <string name="accountname">accountname</string>
    <string name="password">password</string>
    <string name="send">SEND</string>
    <string name="are_you_sure_to_leave">Are you sure to leave?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="personal">Personal</string>
    <string name="would_you_like_to_try_again">would you like to try again?</string>
    <string name="login_fail">Login Fail</string>
    <string name="first_time_login_please">First time login please sign up first.</string>
    <string name="would_youtake_to_sighup">Press OK we well take you to sign up page.</string>
    <string name="login_ok">ok</string>
    <string name="do_nothing">do nothing</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="press_ok">Press OK we well let you try again.</string>
    <string name="password_error">password sign up error</string>
    <string name="enter_8_12_word">Please enter 8~12 letters or numbers</string>
    <string name="sign_ok">ok</string>
    <string name="signup_error">account sign up error</string>
    <string name="enter_4_20_letter">Please enter 4~20 letters or numbers</string>
    <string name="logout_check">Log Out Check</string>
    <string name="want_to_log_out">would you want to log out?</string>
    <string name="signok_ok">OK</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="stay">Stay</string>
    <string name="message">message</string>
    <string name="leave">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="nono">No</string>
</resources>